--- a/static/index.html
+++ b/static/index.html
@@ -9,7 +9,7 @@ title: Home
 
   <div class="right">
     <h1>Boris Buliga</h1>
-    <h2>Developer <a href="https://wix.com">@Wix</a></h2>
+    <h2>Server-side developer <a href="https://wix.com">@Wix</a></h2>
     <p>Coding in <a href="https://haskell-lang.org/">Haskell</a>, <a href="https://www.scala-lang.org/">Scala</a>, <a href="https://docs.microsoft.com/en-us/dotnet/csharp/language-reference/">C#</a> and whatever suits my needs. Tea addict, wine lover and a traveler.</p>
     <p></p>
     <p></p>
