update post page

--- a/static/index.html
+++ b/static/index.html
@@ -15,7 +15,7 @@ title: Home
     <p></p>
     <p></p>
     <ul>
-      <li> <a class="fa fa-book" href="https://blog.d12frosted.io" title="blog"></a></li>
+      <li> <a class="fa fa-book" href="/blog" title="blog"></a></li>
       <li> <a class="fa fa-github" href="https://github.com/d12frosted" title="d12frosted"></a></li>
       <li> <a class="fa fa-stack-overflow" href="https://stackoverflow.com/users/3086454/d12frosted" title="d12frosted"></a></li>
     </ul>
