--- a/static/index.html
+++ b/static/index.html
@@ -4,7 +4,7 @@ title: Home
 
 <div class="body">
   <div class="left">
-    <a href="https://d12frosted.io" title="Click to read more about me"><img src="images/boris_b.png"></a>
+    <a href="https://d12frosted.io" title="Click to read more about me"><img src="images/boris.png"></a>
   </div>
 
   <div class="right">
@@ -15,9 +15,10 @@ title: Home
     <p></p>
     <p></p>
     <ul>
-      <li> <a class="fa fa-book" href="/blog" title="blog"></a></li>
-      <li> <a class="fa fa-github" href="https://github.com/d12frosted" title="d12frosted"></a></li>
-      <li> <a class="fa fa-stack-overflow" href="https://stackoverflow.com/users/3086454/d12frosted" title="d12frosted"></a></li>
+      <li> <a class="fa fa-pencil" href="/blog.html" title="Blog"></a></li>
+      <li> <a class="fa fa-envelope" href="mailto:boris@d12frosted.io" title="Email"></a></li>
+      <li> <a class="fa fa-github" href="https://github.com/d12frosted" title="GitHub"></a></li>
+      <li> <a class="fa fa-stack-overflow" href="https://stackoverflow.com/users/3086454/d12frosted" title="StackOverflow"></a></li>
     </ul>
   </div>
 </div>
