add more information about myself

--- a/static/index.html
+++ b/static/index.html
@@ -10,10 +10,16 @@ title: Home
   <div class="right">
     <h1>Boris Buliga</h1>
     <h2>Server-side developer <a href="https://wix.com">@Wix</a></h2>
-    <p>Coding in <a href="https://haskell-lang.org/">Haskell</a>, <a href="https://www.scala-lang.org/">Scala</a>, <a href="https://docs.microsoft.com/en-us/dotnet/csharp/language-reference/">C#</a> and whatever suits my needs. Tea addict, wine lover and a traveler.</p>
-    <p></p>
-    <p></p>
-    <p></p>
+    <p>
+      Coding
+      in <a href="https://haskell-lang.org/">Haskell</a>, <a href="https://www.scala-lang.org/">Scala</a>, <a href="https://docs.microsoft.com/en-us/dotnet/csharp/language-reference/">C#</a>
+      and whatever suits my needs. Tea addict, wine lover and a traveler.
+    </p>
+    <p>
+      Favourite editor
+      is <a href="https://www.gnu.org/software/emacs/">Emacs</a>
+      with <a href="http://spacemacs.org">Spacemacs</a>.
+    </p>
     <ul>
       <li> <a class="fa fa-pencil" href="/blog.html" title="Blog"></a></li>
       <li> <a class="fa fa-envelope" href="mailto:boris@d12frosted.io" title="Email"></a></li>
