--- a/index.html
+++ b/index.html
@@ -20,9 +20,11 @@
     <nav>
       <a href="./rss/posts.rss" title="RSS feed">
         <img class="icon-rss" src="./images/rss.svg" alt="RSS">
+        <span>RSS</span>
       </a>
       <a href="$gitHubUrl$" title="GitHub profile">
         <img class="icon" src="./images/github.svg" alt="GitHub">
+        <span>GitHub</span>
       </a>
     </nav>
     $partial("templates/post-list.html")$
