--- a/assets/index.html
+++ b/assets/index.html
@@ -9,8 +9,7 @@
     <meta property="og:locale" content="es_US">
     <meta property="og:url" content="$siteUrl$">
     <title>$siteTitle$</title>
-    <link rel="stylesheet" href="/css/bundle.css" />
-    <link rel="stylesheet" href="/css/index.css" />
+    <link rel="stylesheet" href="/css/index-bundle.css" />
     <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
     <script src='https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.2/MathJax.js?config=TeX-MML-AM_CHTML'></script>
   </head>
