--- a/assets/index.html
+++ b/assets/index.html
@@ -11,7 +11,7 @@
     <title>$siteTitle$</title>
     <link rel="stylesheet" href="/css/index-bundle.css" />
     <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
-    <script src='https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.2/MathJax.js?config=TeX-MML-AM_CHTML'></script>
+    <script src='/library/MathJax/MathJax.js?config=TeX-MML-AM_CHTML'></script>
   </head>
   <body>
     $partial("templates/nav.html")$
